# challenge1

./: .gitignore  README.md  crud.db  main.py  pyproject.toml
.github/workflows/: main.yml
api/models/: crud.py
api/routers/: crud.py  graphQL.py  restfulAPI.py
api/schemas/: crud.py  graphQL.py
app/: main.py
authentication/: auth.py  config.py
