[project]
name = "challeng1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "strawberry-graphql>=0.278.0",
    "tortoise-orm>=0.25.1",
    "uvicorn>=0.35.0",
]
